# bayes-toolbox

./: .gitignore  404.html  BEST.ipynb  CHANGELOG.MD  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  bayesian_fxns_sandbox.ipynb  environment.yml  example.ipynb  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  sitemap.xml
.ipynb_checkpoints/: BEST-checkpoint.ipynb  README-checkpoint.md  bayesian_fxns_sandbox-checkpoint.ipynb  example-checkpoint.ipynb
about/: index.html
bayes_toolbox/: __init__.py  glm.py  meta.py
bst/: hierarchical_regression.py  parse_categorical.py  two_factor_anova.py  unstandardize_linreg_parameters.py  unstandardize_multiple_linreg_parameters.py
docs/: getting-started.md  mkdocs.yml
examples/: BEST.ipynb  README.md  logistic-regression.ipynb  logistic_regression.ipynb  meta-analyses.ipynb  meta-analysis-normal-normal.ipynb  meta-analysis-two-proportions.ipynb  multiple-regression.ipynb  multiple_regression.ipynb
faq/: index.html
future-plans/: index.html
getting-started/: index.html
how-to-contribute/: index.html
kruschke_data/: AnovaShrinkageData.csv  BugsRatsData.csv  CondLogistRegData1.csv  CondLogistRegData2.csv  CrimeDrink.csv  FourByFourCount.csv  HairEyeColor.csv  HappinessAssetsDebt.csv  HtWtData110.csv  IncomeFamszState3yr.csv  ItemResponseTheoryData.csv  MetaAnalysisBetaBlocker.csv  Movies.csv  MultLinRegrPlotCorr.csv  MultLinRegrPlotUnif.csv  NonhomogVarData.csv  OrdinalProbitData-1grp-1.csv  OrdinalProbitData-1grp-2.csv  OrdinalProbitData-LinReg-2.csv  OrdinalProbitData-Movies.csv  OrdinalProbitData1.csv  RatLives.csv  Salary.csv  SeaweedData.csv  ShohatOphirKAMH2012dataReduced.csv  SoftmaxRegData1.csv  SoftmaxRegData2.csv  SplitPlotAgriData.csv  StormTressoldiDiRisio2010data.csv  z15N50.csv  z6N8z2N7.csv
notebooks/: BEST.ipynb  Untitled.ipynb  example.ipynb  multiple_regression_example.ipynb  robust_linear_regression_example.ipynb  two_way_and_mixed_model_anova.ipynb
paper/: paper.bib  paper.md
reference/: index.html
search/: search_index.json
src/: BEST.py  BEST_copy.py  bayesian_stats.py  multiple_linear_regression.py  (+4 more)
src.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+35 files in other folders)
